--- a/demos/browser/app/meetingV2/meetingV2.html
+++ b/demos/browser/app/meetingV2/meetingV2.html
@@ -371,18 +371,17 @@
         <div id="transcribe-partial-stability" class="hidden">
           <label for="partial-stability" class="sr-only">Transcribe Entities</label>
           <select id="partial-stability" class="custom-select"  style="width:100%">
-            <option value="" selected>--optional--</option>
+            <option value="" selected> -- DEFAULT (HIGH) -- </option>
             <option value="low">LOW</option>
             <option value="medium">MEDIUM</option>
-            <option value="high">HIGH</option>
           </select>
         </div>
       </div>
-      <div id='engine-transcribe-content-identification' class="custom-control custom-checkbox" style="text-align: left;">
+      <div id="engine-transcribe-content-identification" class="custom-control custom-checkbox" style="text-align: left;">
         <input type="checkbox" id="content-identification-checkbox" class="custom-control-input">
         <label for="content-identification-checkbox" class="custom-control-label">Enable PII Content Identification</label>
       </div>
-      <div id='engine-transcribe-medical-content-identification' class="custom-control custom-checkbox hidden" style="text-align: left;">
+      <div id="engine-transcribe-medical-content-identification" class="custom-control custom-checkbox hidden" style="text-align: left;">
         <input type="checkbox" id="medical-content-identification-checkbox" class="custom-control-input">
         <label for="medical-content-identification-checkbox" class="custom-control-label">Enable PHI Content Identification</label>
       </div>
@@ -393,7 +392,7 @@
       <div id="transcribe-entity-types" class="hidden">
         <label for="transcribe-entity" class="sr-only">Transcribe Entities</label>
         <select id="transcribe-entity" class="custom-select"  style="width:100%" multiple>
-          <option selected value> -- ALL -- </option>
+          <option selected value> -- DEFAULT (ALL) -- </option>
           <option value="BANK_ROUTING">BANK ROUTING</option>
           <option value="CREDIT_DEBIT_NUMBER">CREDIT/DEBIT NUMBER</option>
           <option value="CREDIT_DEBIT_CVV">CREDIT/DEBIT CVV</option>
