--- a/demos/browser/app/meetingV2/meetingV2.html
+++ b/demos/browser/app/meetingV2/meetingV2.html
@@ -374,6 +374,7 @@
             <option value="" selected> -- DEFAULT (HIGH) -- </option>
             <option value="low">LOW</option>
             <option value="medium">MEDIUM</option>
+            <option value="high">HIGH</option>
           </select>
         </div>
       </div>
